fix: fix update button in mocks(cliente and proveedor)

--- a/mocks/clientes-mocks/RegistrarCliente.html
+++ b/mocks/clientes-mocks/RegistrarCliente.html
@@ -79,7 +79,7 @@
             </div>
 
             <div class="actions">
-                <button class="btn btn-verde" onclick="createClient(event)">Crear</button>
+                <button class="btn btn-verde">Crear</button>
             </div>
         </form>
     </main>
