--- a/mocks/proveedores-mocks/ActualizarProveedor.html
+++ b/mocks/proveedores-mocks/ActualizarProveedor.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="actions">
-                <button class="btn btn-verde">Crear</button>
+                <button class="btn btn-naranja">Actualizar</button>
             </div>
         </form>
     </main>
