--- a/mocks/clientes-mocks/ActualizarCliente.html
+++ b/mocks/clientes-mocks/ActualizarCliente.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="actions">
-                <button class="btn btn-verde" onclick="updateClient(event)">Crear</button>
+                <button class="btn btn-naranja">Actualizar</button>
             </div>
         </form>
     </main>
