--- a/mocks/usuarios-mocks/ActualizarUsuario.html
+++ b/mocks/usuarios-mocks/ActualizarUsuario.html
@@ -79,7 +79,7 @@
             </div>
 
             <div class="actions">
-                <button class="btn btn-naranja" onclick="updateUser(event)">Actualizar</button>
+                <button class="btn btn-naranja">Actualizar</button>
             </div>
         </form>
     </main>
