fix: fixed update buttons in update proveedores and clientes

--- a/webapp/clientes/ActualizarCliente.html
+++ b/webapp/clientes/ActualizarCliente.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="actions">
-                <button class="btn btn-verde" onclick="updateClient(event)">Crear</button>
+                <button class="btn btn-naranja" onclick="updateClient(event)">Naranja</button>
             </div>
         </form>
     </main>
