--- a/webapp/proveedores/ActualizarProveedor.html
+++ b/webapp/proveedores/ActualizarProveedor.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="actions">
-                <button class="btn btn-verde" onclick="updateProveedor(event)">Crear</button>
+                <button class="btn btn-naranja" onclick="updateProveedor(event)">Actualizar</button>
             </div>
         </form>
     </main>
