ft: added routing to Productos in menu

--- a/webapp/proveedores/ConsultarProveedores.html
+++ b/webapp/proveedores/ConsultarProveedores.html
@@ -23,7 +23,7 @@
             <a href="../usuarios/ConsultarUsuario.html">Usuarios</a>
             <a href="../clientes/ConsultarClientes.html">Clientes</a>
             <a class="active" href="./ConsultarProveedores.html">Proveedores</a>
-            <a href="#">Productos</a>
+            <a href="../productos/ConsultarProductos.html">Productos</a>
             <a href="#">Ventas</a>
             <a href="#">Reportes</a>
             <a href="#" onclick="closeSession()">Cerrar sesión</a>
