--- a/webapp/usuarios/registrarUsuarios.html
+++ b/webapp/usuarios/registrarUsuarios.html
@@ -20,7 +20,7 @@
             <a class="active" href="./userList.html">Usuarios</a>
             <a href="../clientes/ConsultarClientes.html">Clientes</a>
             <a href="../proveedores/ConsultarProveedores.html">Proveedores</a>
-            <a href="#">Productos</a>
+            <a href="../productos/ConsultarProductos.html">Productos</a>
             <a href="#">Ventas</a>
             <a href="#">Reportes</a>
             <a href="#" onclick="closeSession()">Cerrar sesión</a>
