--- a/webapp/clientes/ActualizarCliente.html
+++ b/webapp/clientes/ActualizarCliente.html
@@ -23,7 +23,7 @@
             <a href="../usuarios/ConsultarUsuario.html">Usuarios</a>
             <a class="active" href="../clientes/ConsultarClientes.html">Clientes</a>
             <a href="../proveedores/ConsultarProveedores.html">Proveedores</a>
-            <a href="#">Productos</a>
+            <a href="../productos/ConsultarProductos.html">Productos</a>
             <a href="#">Ventas</a>
             <a href="#">Reportes</a>
             <a href="#" onclick="closeSession()">Cerrar sesión</a>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="actions">
-                <button class="btn btn-naranja" onclick="updateClient(event)">Naranja</button>
+                <button class="btn btn-naranja" onclick="updateClient(event)">Actualizar</button>
             </div>
         </form>
     </main>
