--- a/webapp/clientes/ConsultarClientes.html
+++ b/webapp/clientes/ConsultarClientes.html
@@ -23,7 +23,7 @@
             <a class="" href="../usuarios/ConsultarUsuario.html">Usuarios</a>
             <a class="active" href="./ConsultarClientes.html">Clientes</a>
             <a href="../proveedores/ConsultarProveedores.html">Proveedores</a>
-            <a href="#">Productos</a>
+            <a href="../productos/ConsultarProductos.html">Productos</a>
             <a href="#">Ventas</a>
             <a href="#">Reportes</a>
             <a href="#" onclick="closeSession()">Cerrar sesión</a>
