--- a/webapp/proveedores/ActualizarProveedor.html
+++ b/webapp/proveedores/ActualizarProveedor.html
@@ -24,7 +24,7 @@
             <a href="../usuarios/ConsultarUsuario.html">Usuarios</a>
             <a class="active" href="../clientes/ConsultarClientes.html">Clientes</a>
             <a href="./ConsultarProveedores.html">Proveedores</a>
-            <a href="#">Productos</a>
+            <a href="../productos/ConsultarProductos.html">Productos</a>
             <a href="#">Ventas</a>
             <a href="#">Reportes</a>
             <a href="#" onclick="closeSession()">Cerrar sesión</a>
