ft:added Ventas routes in navigation

--- a/webapp/usuarios/ActualizarUsuario.html
+++ b/webapp/usuarios/ActualizarUsuario.html
@@ -24,7 +24,7 @@
             <a href="../clientes/ConsultarClientes.html">Clientes</a>
             <a href="../proveedores/ConsultarProveedores.html">Proveedores</a>
             <a href="../productos/ConsultarProductos.html">Productos</a>
-            <a href="#">Ventas</a>
+            <a href="../ventas/ConsultarVentas.html">Ventas</a>
             <a href="#">Reportes</a>
             <a href="#" onclick="closeSession()">Cerrar sesión</a>
         </nav>
@@ -33,7 +33,6 @@
             <a class="" href="./ConsultarUsuario.html">Ver Usuarios</a>
             <a class="" href="./registrarUsuarios.html">Agregar Usuarios</a>
         </nav>
-
     </header>
 
     <main class="contenedor form-container-modules">
