--- a/webapp/proveedores/RegistrarProveedor.html
+++ b/webapp/proveedores/RegistrarProveedor.html
@@ -25,7 +25,7 @@
             <a href="../clientes/ConsultarClientes.html">Clientes</a>
             <a class="active" href="./ConsultarProveedores.html">Proveedores</a>
             <a href="../productos/ConsultarProductos.html">Productos</a>
-            <a href="#">Ventas</a>
+            <a href="../ventas/ConsultarVentas.html">Ventas</a>
             <a href="#">Reportes</a>
             <a href="#" onclick="closeSession()">Cerrar sesión</a>
         </nav>
