--- a/webapp/usuarios/ConsultarUsuario.html
+++ b/webapp/usuarios/ConsultarUsuario.html
@@ -24,7 +24,7 @@
             <a href="../clientes/ConsultarClientes.html">Clientes</a>
             <a href="../proveedores/ConsultarProveedores.html">Proveedores</a>
             <a href="../productos/ConsultarProductos.html">Productos</a>
-            <a href="#">Ventas</a>
+            <a href="../ventas/ConsultarVentas.html">Ventas</a>
             <a href="#">Reportes</a>
             <a href="#" onclick="closeSession()">Cerrar sesión</a>
         </nav>
