--- a/webapp/index.html
+++ b/webapp/index.html
@@ -39,12 +39,12 @@
         </form>
     </main>
 
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../../controllers/utils.js"></script>
+    <script src="../controllers/utils.js"></script>
     <script src="../controllers/AuthenticationController.js"></script>
 </body>
 </html>
